
    YARN-2777. Mark the end of individual log in aggregated log.
    (Varun Saxena via xgong)

    YARN-3273. Improve scheduler UI to facilitate scheduling analysis and
    debugging. (Rohith Sharmaks via jianhe)

  OPTIMIZATIONS

    YARN-2990. FairScheduler's delay-scheduling always waits for node-local and 
    rack-local delays, even for off-rack-only requests. (kasha)

  BUG FIXES

    YARN-3554. Default value for maximum nodemanager connect wait time is too high. Contributed by Naganarasimha G R

    YARN-4414. Nodemanager connection errors are retried at multiple levels. Contributed by Chang Li

    YARN-3840 Resource Manager web ui issue when sorting application by id (with application having id > 9999) (Bug 21865)

    YARN-3544. Got back AM logs link on the RM web UI for a completed app.
    (Xuan Gong via zjshen)

    YARN-3071. Remove invalid char from sample conf in doc of FairScheduler.
    (Masatake Iwasaki via aajisaka)

    YARN-3614 FileSystemRMStateStore throw exception when failed to remove
    application, that cause resourcemanager to crash
  
    YARN-3485. FairScheduler headroom calculation doesn't consider 
    maxResources for Fifo and FairShare policies. (kasha)

    YARN-4256. YARN fair scheduler vcores with decimal values. Contributed by Jun Gong

    YARN-3832. Resource Localization fails on a cluster due to existing cache
    directories (Brahma Reddy Battula via jlowe)

    YARN-3753. RM failed to come up with "java.io.IOException: Wait for
    ZKClient creation timed out”. (Jian He via xgong)

    YARN-3675. FairScheduler: RM quits when node removal races with
    continuous-scheduling on the same node. (Anubhav Dhoot via kasha)

    YARN-3601. Fix UT TestRMFailover.testRMWebAppRedirect. (Weiwei Yang via xgong)

    YARN-3585. NodeManager cannot exit on SHUTDOWN event triggered and NM
    recovery is enabled (Rohith Sharmaks via jlowe)

    YARN-3487. CapacityScheduler scheduler lock obtained unnecessarily when